Selection extended over space on doubleclick
Categories
(Core :: DOM: Selection, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox83 | --- | fixed |
People
(Reporter: jj.sarton, Assigned: saschanaz)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:80.0) Gecko/20100101 Firefox/80.0
Steps to reproduce:
Create the a file with the following content:
<html lang="en"><body><div><p>Test, these are <strong> strong </strong> <em> italic </em> normal.</p></div></body></html>
Perform double click on the word normal, italic or strong.
Actual results:
The selection is extended to the left, e.g:
are strong italic normal
if the word normal is double clicked
Expected results:
The selection should not be extended, only the clicked word should be selected.
Comment 1•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
Word breaking spaces could be incorrectly skipped if it was trimmed by CSS whitespace rules. This patch makes sure it can still break words when selecting text.
Updated•5 years ago
|
![]() |
||
Comment 5•5 years ago
|
||
bugherder |
Description
•