Bug 1667138 - Do not skip backward word breaker r=emilio

Word breaking spaces could be incorrectly skipped if it was trimmed by CSS whitespace rules. This patch makes sure it can still break words when selecting text.

Differential Revision: https://phabricator.services.mozilla.com/D91494